swapped a few photos and fixed spacing

--- a/home_style.css
+++ b/home_style.css
@@ -6,13 +6,13 @@
 #header h1 {
     float: left;
     width: 30%;
-    margin-left: 1.25%;
+    margin-left: 1.5%;
+    padding-left: 2%;
     font-family: Helvetica, sans-serif;
     font-size: 2.75em;
     text-decoration: underline;
     color: #eee;
-    margin-top: 1.19%;
-    margin-left: 1.75%;
+    margin-top: 1.21%;
 }
 
 #menubar {
@@ -23,7 +23,7 @@
     width: 55%;
     border: 1.5px solid white;
     border-radius: 10px;
-    margin-top: .75%;
+    margin-top: .77%;
     background: rgba(0, 0, 0, .77);
 }
 
@@ -101,7 +101,7 @@ a:link, a:visited, a:hover, a:active {
     float: left;
     width: 98px;
     height: 102px;
-    margin-left: .5%;
+    margin-left: .75%;
     border: 2px solid white;
     border-radius: 50%;
 }
